@@ -126,7 +126,14 @@
         </li>
       </ul>
 
-    
+    @php
+         $wallet=\App\wallet::where('employeeid',Auth::id())
+                ->get();
+         $walletcr=$wallet->sum('credit');
+         $walletdr=$wallet->sum('debit');
+         $walletbalance=$walletcr-$walletdr;
+
+      @endphp
       <div class="navbar-custom-menu">
         @if(Auth::user()->usertype!='MASTER ADMIN')
         <ul class="navbar-nav nav" style="padding-right: 20px;padding-top: 10px;">
@@ -135,7 +142,7 @@
           <img src="{{asset('wallet.png')}}" style="height: 40px;width: 40px;">
         </li>
         <li class="dropdown message-menu">
-          <strong style="color: #fff;">Wallet</strong><p style="color: #fff;" id="walletbalance">Rs.22</p>
+          <strong style="color: #fff;">Wallet</strong><p style="color: #fff;" id="walletbalance">Rs. {{$walletbalance}}</p>
         </li>
         </ul>
         @endif
@@ -303,27 +310,7 @@
               @endif
           </ul>
         </li>
-        @if(Auth::user()->usertype=='MASTER ADMIN')
-
-        <li class="{{ Request::is('reports*') ? 'active' : '' }} treeview">
-                  <a href="#">
-                    <i class="fa fa-money"></i> <span>REPORTS</span>
-                    <span class="pull-right-container">
-                      <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                  </a>
-                  <ul class="treeview-menu">
-                     <li class="{{ Request::is('reports/userwisepaymentreports') ? 'active' : '' }}"><a href="/reports/userwisepaymentreports"><i class="fa fa-circle-o text-red"></i>USER WISE PAYMENT REPORT</a></li>
-                     <!-- <li class="{{ Request::is('reports/projectwisepaymentreports') ? 'active' : '' }}"><a href="/reports/projectwisepaymentreports"><i class="fa fa-circle-o text-red"></i>PROJECT WISE PAYMENT REPORT</a></li>
-                    <li class="{{ Request::is('reports/paymentreports') ? 'active' : '' }}"><a href="/reports/paymentreports"><i class="fa fa-circle-o text-red"></i> PAYMENT REPORT</a></li>
-
-                    <li class="{{ Request::is('reports/transactionreport') ? 'active' : '' }}"><a href="/reports/transactionreport"><i class="fa fa-circle-o text-red"></i>TRANSACTION REPORT</a></li>
-
-                    <li class="{{ Request::is('reports/expensereport') ? 'active' : '' }}"><a href="/reports/expensereport"><i class="fa fa-circle-o text-red"></i>EXPENSE REPORT</a></li> -->
-
-                  </ul>
-        </li>
-        @endif
+        
 
     </section>
     <!-- /.sidebar -->
